--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ html{
   scroll-behavior: smooth;
 }
 header{
-height: 80vh;
+height: 30em;
 width: 100%;
 background-image: url('../img/developpeur.jpg');
 background-repeat: no-repeat;
@@ -13,19 +13,11 @@ background-position-x: center;
 background-size: cover;
 }
 .centeredH1{
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 16vh;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  font-size: 6em;
 }
 .centeredParagraph{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 5vh;
+  font-size: 1.5em;
   /* pour mettre des contour au texte */
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
@@ -35,9 +27,6 @@ background-size: cover;
   border-top: 4px solid black;
   border-bottom: 4px solid black;
   /*filter: blur(3px);*/
-}
-p{
-  font-size: 4vh;
 }
 /* début css pour card expérience pro */
 .container{
@@ -65,8 +54,8 @@ p{
   padding: 0!important;
 }
 .experiencePro img {
-  width: 100%;
-  height: 100%;
+  width: 18em;
+  height: 18em;
   object-fit: cover;
 }
 .experiencePro:hover .overlay {
@@ -74,7 +63,7 @@ p{
 }
 .text {
   color: white;
-  font-size: 20px;
+  font-size: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -82,4 +71,14 @@ p{
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
+}
+#textPresentation{
+  font-size: 1.7em;
+}
+#photoProfil{
+  z-index: 5;
+}
+.imageLogiciel{
+  height: 16em;
+  width: 16em;
 }
